[tool.poetry]
name = "super_ssh"
version = "0.1.0"
description = ""
authors = ["tejus3131 <tejus3131@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pynput = "^1.7.7"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
pillow = "^10.3.0"
pygame = "^2.5.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
client = "super_ssh:client"
host = "super_ssh:host"